titulo de index actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>  
     <header>
         <nav class="navBar">
-            <h1>CLASS TIS</h1>
+            <h1>MasterTis</h1>
             <ul>
               <a class="itemNav" href="./index.html">Pagina principal</a>
               <a class="itemNav" href="./login.html">iniciar sesion</a>
