--- a/public/listaConvocatorias.html
+++ b/public/listaConvocatorias.html
@@ -18,7 +18,7 @@
         <nav class="navBar">
           <h1>APOYO A LA EMPRESA TIS</h1>
              <ul>
-              <a class="itemNav" href="./index.html">Pagina principal</a>
+              <a class="itemNav" href="../index.html">Pagina principal</a>
               <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
              </ul>
           </nav>
