--- a/public/RegistrarseEnClase.html
+++ b/public/RegistrarseEnClase.html
@@ -19,7 +19,7 @@
         <nav class="navBar">
           <h1>APOYO A LA EMPRESA TIS</h1>
              <ul>
-              <a class="itemNav" href="../index.html">Pagina principal</a>
+              <a class="itemNav" href="./index.html">Pagina principal</a>
              <!-- <a class="itemNav" href="./formularioConvocatorias.html"> Publicar Convocatorias</a> -->
             <!-- <a class="itemNav" href="./formularioPliego.html"> Publicar Pliego</a> -->
             <!-- <a class="itemNav" href="./listaConvocatorias.html"> Lista de Convocatorias</a> -->
