--- a/public/formularioPliego.html
+++ b/public/formularioPliego.html
@@ -18,7 +18,7 @@
       <nav class="navBar">
         <h1>APOYO A LA EMPRESA TIS</h1>
            <ul>
-            <a class="itemNav" href="../index.html">Pagina principal</a>
+            <a class="itemNav" href="./index.html">Pagina principal</a>
             <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
            </ul>
         </nav>
@@ -37,8 +37,9 @@
          </ul>
     </div>
     <div class="div-formulario">
+      <h1>PUBLICAR PLIEGO DE ESPECIFICACIONES</h1>
       <form id="formulario" class="formulario">
-      <h1>PUBLICAR PLIEGO DE ESPECIFICACIONES</h1> 
+       
         <h2>Título</h2>
         <input class="input-titulo" name="titulo" type="text" placeholder="Intoduzca el título">
 
