--- a/public/perfil.html
+++ b/public/perfil.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
+    <link rel="stylesheet" href="../styles/style-sidebar.css">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <title>TIS</title>
 </head>
 <body>
     <header>
         <nav class="navBar">
           <h1>APOYO A LA EMPRESA TIS</h1>
              <ul>
-              <a class="itemNav" href="../index.html">volver a la pagina principal</a>
+              <a class="itemNav" href="./index.html">volver a la pagina principal</a>
               <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
              </ul>
           </nav>
