rutas modificadas en archivos html, archivo index.html movido a la raíz

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style-header.css">
-    <link rel="stylesheet" href="../styles/style-sidebar.css">
+    <link rel="stylesheet" href="./styles/style-header.css">
+    <link rel="stylesheet" href="./styles/style-sidebar.css">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
             <h1>CLASS TIS</h1>
             <ul>
               <a class="itemNav" href="./index.html">Pagina principal</a>
-              <a class="itemNav" href="./login.html">iniciar sesion</a>
+              <a class="itemNav" href="./public/login.html">iniciar sesion</a>
             </ul>
         </nav>
       </header>
