--- a/public/tareas.html
+++ b/public/tareas.html
@@ -19,7 +19,7 @@
         <nav class="navBar">
           <h1>MasterTis</h1>
              <ul>
-              <a class="itemNav" href="./index.html">Pagina principal</a>
+              <a class="itemNav" href="../index.html">Pagina principal</a>
               <a class="itemNav" href="cerrarSesion.html">Cerrar sesion</a>
              </ul>
         </nav>
