--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style-header.css">
-    <link rel="stylesheet" href="./styles/style-sidebar.css">
+    <link rel="stylesheet" href="../styles/style-sidebar.css">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <title>TIS</title>
 </head>
 <body>  
     <header>
         <nav class="navBar">
-            <h1>CLASS TIS</h1>
+            <h1>MasterTis</h1>
             <ul>
               <a class="itemNav" href="./index.html">Pagina principal</a>
               <a class="itemNav" href="./public/login.html">iniciar sesion</a>
