--- a/public/login.html
+++ b/public/login.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <header class="header">
-        <h1>APOYO A LA EMPRESA TIS</h1>
-        <nav class="navBar">
-            <h1>APOYO A LA EMPRESA TIS</h1>
+        <h1>MasterTis</h1>
+        <!-- <nav class="navBar"> -->
+            <!-- <h1>APOYO A LA EMPRESA TIS</h1>
                <ul>
                 <a class="itemNav" href="../index.html">Pagina principal</a>
                 <!-- <a class="itemNav" href="./formularioConvocatorias.html"> Publicar Convocatorias</a> -->
@@ -27,8 +27,8 @@
               <!-- <a class="itemNav" href="./RegistrarseEnClase.html">registrarse</a> -->
               <!-- <a class="itemNav" href="./crearClase.html">crearClase</a> -->
               <!-- <a class="itemNav" href="./login.html">iniciar sesion</a> -->
-               </ul>
-            </nav>
+               <!-- </ul> -->
+            <!-- </nav> -->
     </header>
     <main class="main">
         <section class="main-section">
