--- a/public/perfil.html
+++ b/public/perfil.html
@@ -11,12 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <title>TIS</title>
 </head>
 <body>
     <header>
         <nav class="navBar">
-          <h1>APOYO A LA EMPRESA TIS</h1>
+          <h1>MasterTis</h1>
              <ul>
               <a class="itemNav" href="../index.html">volver a la pagina principal</a>
               <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
