--- a/public/tareas.html
+++ b/public/tareas.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
     <title>TIS</title>
 </head>
 <body>  
@@ -38,15 +39,27 @@
       </div>
 
       <section class="main-section">
+
         <div class="section-card-tarea">
             <p class="card-title">Tarea</p>
             <div class="card-information">
-                <p>Titulo: <span></span></p>
-                <p>Descripción: <span></span></p>
-                <p>Fecha de entrega: <span></span></p> 
+                <p>Titulo:  <span>Presentación de grupo empresa</span></p>
+                <p>Descripción:  <span></span></p>
+                <p>Fecha de entrega:  <span></span></p> 
             </div>
             <button type="submit">Ver Tarea</button>
         </div>
+
+        <div class="section-card-tarea">
+          <p class="card-title">Tarea</p>
+          <div class="card-information">
+              <p>Titulo:  <span></span></p>
+              <p>Descripción:  <span></span></p>
+              <p>Fecha de entrega:  <span></span></p> 
+          </div>
+          <button type="submit">Ver Tarea</button>
+        </div>
+
       </section>
 
       <!-- <div id="contenedor-tarjetas"></div> -->
