--- a/public/listaConvocatorias.html
+++ b/public/listaConvocatorias.html
@@ -28,11 +28,29 @@
 
     <main class="flex-body">
       <div class="sidebar">
-        <h2 class="sidebar-title">Navegación</h2>
+        <!-- <h2 class="sidebar-title">Navegación</h2> -->
         <ul class="sidebar-list">
-          <li><a href="./perfil.html" class="sidebar-item">Perfil</a></li>
-          <li><a href="./listaConvocatorias.html" class="sidebar-item">Convocatorias</a></li>
-          <li><a href="./tareas.html" class="sidebar-item">Tareas</a></li>
+          <li>
+            <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
+            <a href="./perfil.html" class="sidebar-item">Perfil</a>
+          </li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/file-2.png"/>
+            <a href="./listaConvocatorias.html" class="sidebar-item">Convocatorias</a>
+          </li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/task.png"/>
+            <a href="./tareas.html" class="sidebar-item">Tareas</a>
+          </li>
+          <li>
+            <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
+            <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
+            <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
+          </li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+            <a href="./tareas.html" class="sidebar-item">Ver grupo empresas</a>
+          </li>
           <!-- <li><a href="#">unirse a un grupo empresa</a></li> -->
         </ul>
       </div>
