--- a/public/perfil.html
+++ b/public/perfil.html
@@ -24,10 +24,39 @@
               <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
              </ul>
           </nav>
-      </header>
-
-    <div id="datos-perfil">
-    </div>
+    </header>
+    <main>
+        <div class="sidebar">
+            <!-- <h2 class="sidebar-title">Navegación</h2> -->
+            <ul class="sidebar-list">
+              <li>
+                <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
+                <a href="./perfil.html" class="sidebar-item">Perfil</a>
+              </li>
+              <li>
+                <img src="https://img.icons8.com/ios/100/000000/file-2.png"/>
+                <a href="./listaConvocatorias.html" class="sidebar-item">Convocatorias</a>
+              </li>
+              <li>
+                <img src="https://img.icons8.com/ios/100/000000/task.png"/>
+                <a href="./tareas.html" class="sidebar-item">Tareas</a>
+              </li>
+              <li>
+                <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
+                <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
+                <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
+              </li>
+              <li>
+                <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+                <a href="./tareas.html" class="sidebar-item">Ver grupo empresas</a>
+              </li>
+              <!-- <li><a href="#">unirse a un grupo empresa</a></li> -->
+            </ul>
+        </div>
+        <div id="datos-perfil">
+        </div>
+    </main>    
+    
 <script src="../scripts/recuperarDatosPerfil.js"></script>
 </body>
 </html>
