docente crea la tarea de crear grupo empresas
se corrigieron los espacios diferenciados para docente y la generacion de codigos sera entre numeros y letras

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style-header.css">
-    <link rel="stylesheet" href="../styles/style-sidebar.css">
+    
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,11 @@
             <h1>MasterTis</h1>
             <ul>
               <a class="itemNav" href="./index.html">Pagina principal</a>
-              <a class="itemNav" href="./public/login.html">iniciar sesion</a>
+                <div id="espacio-login">
+
+
+                </div>
+
             </ul>
         </nav>
       </header>
@@ -28,10 +32,9 @@
     <p class="texto-inicio">
 
     </p>
-   <img src="" alt="" class="imagen-inicio">
 
   </div>
-  
+  <script src="./scripts/consultaSesionIniciada.js"></script>
 
 </body>
 </html>
