--- a/public/crearClase.html
+++ b/public/crearClase.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Shippori+Antique&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Crear Clase</title>
 </head>
 <body>
     <header>
@@ -26,7 +26,6 @@
       </header>
 
     <div class="flex-body">
-
       <div class="sidebar">
         <h1 class="sidebar-title">Navegación</h1>
            <ul class="sidebar-list">
@@ -34,6 +33,7 @@
             <div class="subir-editar">
                <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
                <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
+               <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
              </div>
             <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
            </ul>
