--- a/public/crearGrupoEmpresa.html
+++ b/public/crearGrupoEmpresa.html
@@ -31,8 +31,11 @@
     <div class="div-formulario">
       <form id="formulario" class="formulario">
       <h1>REGISTRAR GRUPO-EMPRESA</h1> 
-        <h2>Nombre de la empresa*:</h2>
-        <input class="input-titulo" name="nombreEmpresa" type="text" placeholder="Intoduzca el nombre de la empresa">
+        <h2>Nombre Corto*:</h2>
+        <input class="input-titulo" name="nombreCortoEmpresa" type="text" placeholder="Nombre corto de la empresa">
+ 
+        <h2>Nombre Largo*:</h2>
+        <input class="input-titulo" name="nombreLargoEmpresa" type="text" placeholder="Nombre largo de la empresa">
  
         <h2>Tipo de Sociedad*:</h2>
         <input class="input-titulo" name="sociedad" type="text" placeholder="Intoduzca el tipo de sociedad">
@@ -42,6 +45,13 @@
 
         <h2>Telefono:</h2>
         <input class="input-titulo" name="telefonoEmpresa" type="text" placeholder="Intoduzca el telefono de referencia">
+        
+        <h2>Correo de la empresa*:</h2>
+        <input class="input-titulo" name="correoEmpresa" type="email" placeholder="Intoduzca el correo de la empresa">
+ 
+        <h2>Generar codigo de union</h2>
+        <button type="button">generar codigo para unirse</button>
+        
         <hr>
         <div id="espacio-mensaje"> </div>
         <hr>
