--- a/public/tareas.html
+++ b/public/tareas.html
@@ -83,8 +83,10 @@
               <p>Titulo:  <span></span></p>
               <p>Descripción:  <span></span></p>
               <p>Fecha de entrega:  <span></span></p> 
+              
           </div>
-          <button type="submit">Ver Tarea</button>
+          <a href="./crearGrupoEmpresa.html">crear grupo empresa</a>
+
         </div>
 
       </section>
@@ -92,6 +94,6 @@
       <!-- <div id="contenedor-tarjetas"></div> -->
     </main>
 
-  <script src="../scripts/recuperarConvocatorias.js"></script>
+
 </body>
 </html>
