--- a/public/formularioPliego.html
+++ b/public/formularioPliego.html
@@ -26,17 +26,18 @@
     </header>
     
     <div class="flex-body">
-    <div class="sidebar">
-      <h1 class="sidebar-title">Navegación</h1>
-         <ul class="sidebar-list">
-          <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
-          <div class="subir-editar">
-          <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
-          <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
-          </div>
-          <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>    
-         </ul>
-    </div>
+      <div class="sidebar">
+        <h1 class="sidebar-title">Navegación</h1>
+           <ul class="sidebar-list">
+            <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
+            <div class="subir-editar">
+               <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
+               <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
+               <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
+             </div>
+            <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
+           </ul>
+      </div>
     <div class="div-formulario">
       <h1>PUBLICAR PLIEGO DE ESPECIFICACIONES</h1>
       <form id="formulario" class="formulario">
