crear clase para un estudiante

--- a/public/formularioConvocatorias.html
+++ b/public/formularioConvocatorias.html
@@ -26,16 +26,31 @@
     </header>
     <div class="flex-body"> 
       <div class="sidebar">
-        <h1 class="sidebar-title">Navegación</h1>
-           <ul class="sidebar-list">
-            <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
-            <div class="subir-editar">
-               <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
-               <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
-               <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
-             </div>
-            <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
-           </ul>
+        <!-- <h2 class="sidebar-title">Navegación</h2> -->
+        <ul class="sidebar-list">
+          <li>
+            <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
+            <a href="./perfil.html" class="sidebar-item">Perfil</a>
+          </li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/file-2.png"/>
+            <a href="./listaConvocatorias.html" class="sidebar-item">Convocatorias</a>
+          </li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/task.png"/>
+            <a href="./tareas.html" class="sidebar-item">Tareas</a>
+          </li>
+          <li>
+            <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
+            <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
+            <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
+          </li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+            <a href="./tareas.html" class="sidebar-item">Ver grupo empresas</a>
+          </li>
+          <!-- <li><a href="#">unirse a un grupo empresa</a></li> -->
+        </ul>
       </div>
 
     <div class="div-formulario">
