--- a/public/perfil.html
+++ b/public/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style-header.css">
+    <link rel="stylesheet" href="../styles/style-navbar.css">
     <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
     <!-- Google fonts -->
@@ -13,20 +13,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <title>TIS</title>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 <body>
     <header>
-        <nav class="navBar">
-          <h1>MasterTis</h1>
-             <ul>
-              <a class="itemNav" href="../index.html">volver a la pagina principal</a>
-              <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-             </ul>
-          </nav>
-      </header>
+        <!--Navigation bar-->
+<div id="nav-placeholder">
 
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("navbar.html");
+});
+</script>
+<!--end of Navigation bar-->
+</header> 
+
+  
+<!--Navigation bar-->
+<div id="sidebd-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#sidebd-placeholder").load("sidebarDocente.html");
+});
+</script>
+<!--end of Navigation bar-->
     <div id="datos-perfil">
     </div>
 <script src="../scripts/recuperarDatosPerfil.js"></script>
 </body>
+
 </html>
