--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style-header.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
+        <link rel="stylesheet" href="../styles/style-navbar.css">
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +18,9 @@
 <body>  
     <header>
         <nav class="navBar">
-            <h1>MasterTis</h1>
             <ul>
+            <h1>MasterTis</h1>
+            
               <a class="itemNav" href="./index.html">Pagina principal</a>
               <a class="itemNav" href="./public/login.html">iniciar sesion</a>
             </ul>
