--- a/public/login.html
+++ b/public/login.html
@@ -67,13 +67,12 @@ $(function(){
 <div id="footer-placeholder">
 
 </div>
-
+<!-- >
 <script>
 $(function(){
   $("#footer-placeholder").load("footer.html");
 });
-</script>
-<!--end of Footer-->
+</script>-->
 
     <script src="../scripts/login.js"></script>
 </body>
