--- a/public/paginaPrincipal.html
+++ b/public/paginaPrincipal.html
@@ -38,7 +38,11 @@ $(function(){
   <div class="container" >
   <img src="https://i.postimg.cc/MGMCLfnW/image-2021-11-18-195536.png">
   </div>
+<a href="https://drive.google.com/u/3/uc?id=18CE-1OlVa7RAV6D4rNudx5jizUrAWBwZ&export=download">
+Presiona para descargar el PDF</a>
+
 <div class="container" >
+
     <h1>Docentes</h1>
   </div><hr> 
 
@@ -107,7 +111,8 @@ $(function(){
         </tr>
     </tbody>
 </table>
-
+<a href="https://drive.google.com/u/3/uc?id=1ZSEcPBj9GBqNldZAghG-2U-LmMcXQlJm&export=download">
+Presiona para descargar el PDF</a>
   
 </body>
 <!--Footer-->
