corregido: no se podia subir archivos pdf y la descripcion es opcional de las convocatorias y pliegos

--- a/public/formularioConvocatorias.html
+++ b/public/formularioConvocatorias.html
@@ -60,7 +60,7 @@
         <h2>Título</h2>
         <input class="input-titulo" name="titulo" type="text" placeholder="Intoduzca el título">
 
-        <h2>Fecha Limite de respuestas</h2>
+        <h2>Fecha Limite de recepción de propuestas</h2>
         <input class="input-date-fin" type="date" name="fechaFin">
 
         <h2>Seleccione el semestre</h2>
