validar nombre unico de empresa

--- a/public/tareas.html
+++ b/public/tareas.html
@@ -61,7 +61,10 @@
               Ver grupo empresas
             </a>
           </li>
-         <li><a href="./crearGrupoEmpresa.html">Mi Empresa</a></li>
+          <li>
+            <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
+            <a href="./empresaEstudiante.html" class="sidebar-item">Mi empresa</a>
+         </li>
         </ul>
       </div>
 
