--- a/public/unirseEmpresa.html
+++ b/public/unirseEmpresa.html
@@ -28,7 +28,6 @@
 
     <main class="flex-body">
       <div class="sidebar">
-        <!-- <h2 class="sidebar-title">Navegación</h2> -->
         <ul class="sidebar-list">
           <li>
             <img src="https://img.icons8.com/ios/50/000000/name--v1.png"/>
@@ -43,7 +42,6 @@
             <a href="./tareas.html" class="sidebar-item">Tareas</a>
           </li>
           <li>
-            <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
             <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
             <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
           </li>
@@ -55,13 +53,17 @@
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
             <a href="./empresaEstudiante.html" class="sidebar-item">Mi empresa</a>
          </li>
-  
         </ul>
       </div>
 
-      <div id="contenedor-tarjetas"></div>
-    </main>
+      <form id="formularioUnionEmpresa" class="formulario">
+        <h2>Introduzca el codigo del grupo-empresa al que desea unirse</h2>
+        <input class="input-titulo" name="codigo" type="text" placeholder="Intoduzca el codigo">
+        <button  type="submit" name="botonUnionEmpresa">Unirse al grupo</button>
+      </form>
 
-  <script src="../scripts/recuperarConvocatorias.js"></script>
+    </main>
+<script src="../scripts/unirseEmpresaCodigo.js"></script>
+
 </body>
 </html>
