docente evalua y revisa por grupos

--- a/public/DocenteRevisaGrupos.html
+++ b/public/DocenteRevisaGrupos.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="../styles/style-form.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
   <link rel="stylesheet" href="../styles/style-makeTasks.css">
+  <link rel="stylesheet" href="../styles/style-groups.css">
+  <link rel="stylesheet" href="../styles/style-modal.css">
+
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,14 +48,14 @@
           <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
          </ul>
       </div>
-   <div class="options">
-    <a  href="./crearTareaComun.html">crear tarea común</a>
-    <a  href="./crearTareaGrupos.html">solicitar formar grupos</a>
-   </div>
-</div>
+      <!-- flexbox vertical -->
+  <div id="espacio-botones-seleccion-grupo">
+  </div>
+      
+<script src="../scripts/recuperarGruposClase.js"></script>
 <script src="../scripts/verificarSesionDocente.js"></script>
 
 
-
+</div>
 </body>
 </html>
