--- a/public/crearTareaGrupos.html
+++ b/public/crearTareaGrupos.html
@@ -27,15 +27,19 @@
 <div class="flex-body">
     <div class="sidebar">
         <h1 class="sidebar-title">Navegación</h1>
-           <ul class="sidebar-list">
-            <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
-            <div class="subir-editar">
-               <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
-               <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
-               <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
-             </div>
-            <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
-           </ul>
+        <ul class="sidebar-list">
+         <li><a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a></li> 
+          <div class="subir-editar">
+            <li><a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a></li>
+            <li><a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a></li>
+            <li><a href="./crearTarea.html" class="sidebar-item">crear tarea</a></li>
+          </div>
+          <li><a href="./docenteCalificaGrupos.html" class="sidebar-item">calificar grupos</a></li> 
+          <li><a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">crear un Grupo-Empresa</a></li> 
+          <!--podra editar los grupos de su clase -->
+          <li><a href="./DocenteRevisaGrupos.html" class="sidebar-item">revisar grupos de la clase</a></li> 
+         <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
+        </ul>
       </div>
     <div class="div-formulario">
         <h1 class="formulario-publicar">SOLICITAR FORMAR GRUPOS </h1>
@@ -59,5 +63,6 @@
     </div>
 </div>
 <script src="../scripts/subirTareaFormarGrupos.js"></script>
+<script src="../scripts/verificarSesionDocente.js"></script>
 </body>
 </html>
