--- a/public/crearGrupoEmpresa.html
+++ b/public/crearGrupoEmpresa.html
@@ -62,6 +62,7 @@
 
 </div> 
 <script src="../scripts/llenarCampoMiEmpresa.js"></script>
+<script src="../scripts/verificarSesionEstudiante.js"></script>
 
 
 </body>
