--- a/public/empresaEstudiante.html
+++ b/public/empresaEstudiante.html
@@ -44,7 +44,7 @@
         </li>
         <li>
             <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
-            <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
+            <a href="./unirseEmpresa.html" class="sidebar-item">Unirse a grupo empresa</a>
         </li>
         <li>
           <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
@@ -62,6 +62,6 @@
   </div>
 
   <script src="../scripts/consultarEstudiantePerteneceAEmpresa.js"></script>
-
+  <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
 </html>
