--- a/public/listaConvocatorias.html
+++ b/public/listaConvocatorias.html
@@ -45,7 +45,7 @@
           <li>
             <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
             <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
-            <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
+            <a href="./unirseEmpresa.html" class="sidebar-item">Unirse a grupo empresa</a>
           </li>
           <li>
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
@@ -63,5 +63,6 @@
     </main>
 
   <script src="../scripts/recuperarConvocatorias.js"></script>
+  <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
 </html>
