--- a/public/tareas.html
+++ b/public/tareas.html
@@ -50,7 +50,7 @@
             </a>
           </li>
           <li>
-            <a href="./tareas.html" class="sidebar-item">
+            <a href="./unirseEmpresa.html" class="sidebar-item">
               <img src="https://img.icons8.com/ios/100/000000/add--v1.png"/>
               Unirse a grupo empresa
             </a>
