--- a/public/unirseEmpresa.html
+++ b/public/unirseEmpresa.html
@@ -43,7 +43,7 @@
           </li>
           <li>
             <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
-            <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
+            <a href="./unirseEmpresa.html" class="sidebar-item">Unirse a grupo empresa</a>
           </li>
           <li>
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
@@ -64,6 +64,7 @@
 
     </main>
 <script src="../scripts/unirseEmpresaCodigo.js"></script>
+<script src="../scripts/verificarSesionEstudiante.js"></script>
 
 </body>
 </html>
