--- a/public/DocenteRevisaGrupos.html
+++ b/public/DocenteRevisaGrupos.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="../styles/style-makeTasks.css">
   <link rel="stylesheet" href="../styles/style-groups.css">
   <link rel="stylesheet" href="../styles/style-modal.css">
-
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <link rel="stylesheet" href="../styles/style-navbar.css">
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,17 +22,33 @@
 </head>
 <body>
     <header>
-        <nav class="navBar">
-          <h1>APOYO A LA EMPRESA TIS</h1>
-             <ul>              
-              <a class="itemNav" href="../index.html">Pagina principal</a>
-              <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-             </ul>
-          </nav>
+          <!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("navbar.html");
+});
+</script>
+<!--end of Navigation bar-->
+
+<!--Navigation bar-->
+<div id="sidebd-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#sidebd-placeholder").load("sidebarDocente.html");
+});
+</script>
+<!--end of Navigation bar-->
       </header>
 
 
-<div class="flex-body">
+<!--<div class="flex-body">
     <div class="sidebar">
         <h1 class="sidebar-title">Navegación</h1>
         <ul class="sidebar-list">
@@ -44,7 +61,7 @@
            <li><a href="./docenteCalificaGrupos.html" class="sidebar-item">calificar grupos</a></li> 
            <li><a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">crear un Grupo-Empresa</a></li> 
            <!--podra editar los grupos de su clase -->
-           <li><a href="./DocenteRevisaGrupos.html" class="sidebar-item">revisar grupos de la clase</a></li> 
+           <!--<li><a href="./DocenteRevisaGrupos.html" class="sidebar-item">revisar grupos de la clase</a></li> 
           <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
          </ul>
       </div>
