--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -1,6 +1,6 @@
  <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+<style ="min-height:10000px">
 .dropbtn {
   background-color: #07889b;
   color: white;
@@ -48,6 +48,16 @@
                <a href="./formularioConvocatorias.html" class="sidebar-item">Subir invitacion publica</a>
                <a href="./formularioPliego.html" class="sidebar-item">Subir pliego especificaciones</a>
             <a href="./perfil.html" class="sidebar-item">Ver mi perfil</a>
+            <a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a>
+              <a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a>
+                <a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a>
+                <a href="./crearTarea.html" class="sidebar-item">crear tarea</a>
+              
+             <a href="./docenteCalificaGrupos.html" class="sidebar-item">calificar grupos</a>
+              <a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">crear un Grupo-Empresa</a> 
+              <!--podra editar los grupos de su clase -->
+              <a href="./DocenteRevisaGrupos.html" class="sidebar-item">revisar grupos de la clase</a>
+             <a href="./perfil.html" class="sidebar-item">ver mi perfil</a>
   </div>
 </div>
 
