--- a/public/sidebarDocente.html
+++ b/public/sidebarDocente.html
@@ -47,17 +47,14 @@
             <a href="./crearClase.html" class="sidebar-item">Crear una clase para el semestre actual</a>
                <a href="./formularioConvocatorias.html" class="sidebar-item">Subir invitacion publica</a>
                <a href="./formularioPliego.html" class="sidebar-item">Subir pliego especificaciones</a>
-            <a href="./perfil.html" class="sidebar-item">Ver mi perfil</a>
-            <a href="./crearClase.html" class="sidebar-item">crear una clase para el semestre actual</a>
-              <a href="./formularioConvocatorias.html" class="sidebar-item">subir invitacion publica</a>
-                <a href="./formularioPliego.html" class="sidebar-item">subir pliego especificaciones</a>
-                <a href="./crearTarea.html" class="sidebar-item">crear tarea</a>
-              
-             <a href="./docenteCalificaGrupos.html" class="sidebar-item">calificar grupos</a>
-              <a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">crear un Grupo-Empresa</a> 
+            <a href="./crearClase.html" class="sidebar-item">Crear una clase para el semestre actual</a>
+                <a href="./crearTarea.html" class="sidebar-item">Crear tarea</a>
+                <a href="./docenteCrearGrupo-Empresa.html" class="sidebar-item">Crear un Grupo-Empresa</a> 
+                <a href="./DocenteRevisaGrupos.html" class="sidebar-item">Revisar grupos de la clase</a>
+
+             <a href="./docenteCalificaGrupos.html" class="sidebar-item">Calificar grupos</a>
               <!--podra editar los grupos de su clase -->
-              <a href="./DocenteRevisaGrupos.html" class="sidebar-item">revisar grupos de la clase</a>
-             <a href="./perfil.html" class="sidebar-item">ver mi perfil</a>
+             <a href="./perfil.html" class="sidebar-item">Ver mi perfil</a>
   </div>
 </div>
 
