--- a/public/crearClase.html
+++ b/public/crearClase.html
@@ -43,7 +43,7 @@ $(function(){
 </script>
 <!--end of Navigation bar-->
 
-      <div class="div-formulario">
+      <div style="padding:10px; display: flex; justify-content: center;" class="div-formulario">
         <form id="formulario" class="formulario">
            <h1>Crear nueva clase</h1>
            <br>
