--- a/public/perfil.html
+++ b/public/perfil.html
@@ -5,6 +5,7 @@
     .container {
       height: 200px;
       position: relative;
+      size: 20px;
     }
     
     .center {
@@ -96,7 +97,7 @@ $(function(){
            <!-- </ul>
         </div>-->
         <div class="container">
-          <div class="center">
+          <div style="size= 20px"class="center">
         <div id="datos-perfil">
         </div>
       </div>
