--- a/public/formularioPliego.html
+++ b/public/formularioPliego.html
@@ -58,7 +58,7 @@ $(function(){
       <h1>PUBLICAR PLIEGO DE ESPECIFICACIONES</h1>
       <form id="formulario" class="formulario">
        
-        <h2>Título</h2>
+        <h2>Pliego de especificaciones</h2>
         <input class="input-titulo" name="titulo" type="text" placeholder="Intoduzca el título">
           <div id="espacio-mensajet"> </div>
 
