--- a/public/crearTareaComun.html
+++ b/public/crearTareaComun.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style-header.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
     <link rel="stylesheet" href="../styles/style-crearTareaComun.css">
-    
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="../styles/style-navbar.css">
+
     
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,15 +19,31 @@
 </head>
     <body>
         <header>
-            <nav class="navBar">
-                <h1>APOYO A LA EMPRESA TIS</h1>
-                <ul>              
-                <a class="itemNav" href="../index.html">Pagina principal</a>
-                <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
-                </ul>
-            </nav>
+            <<!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("navbar.html");
+});
+</script>
+<!--end of Navigation bar-->
+
+<!--Navigation bar-->
+<div id="sidebd-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#sidebd-placeholder").load("sidebarDocente.html");
+});
+</script>
+<!--end of Navigation bar-->
         </header>
-        <div class="flex-body">
+        <!--<div class="flex-body">
         <div class="sidebar">
             <h1 class="sidebar-title">Navegación</h1>
             <ul class="sidebar-list">
@@ -38,7 +55,7 @@
             </div>
             <li><a href="./perfil.html" class="sidebar-item">ver mi perfil</a></li>   
             </ul>
-        </div>
+        </div>-->
             <div class="div-formulario">
                 <h1>Formulario para Crear Tarea</h1>
                 <form id="formulario" class="formulario">  
