ruta a estilos de intex corregidos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style-sidebar.css">
-    <link rel="stylesheet" href="../styles/style-navbar.css">
-        <link rel="stylesheet" href="../styles/style-paginaprincipal.css">
+    <link rel="stylesheet" href="./styles/style-sidebar.css">
+    <link rel="stylesheet" href="./styles/style-navbar.css">
+        <link rel="stylesheet" href="./styles/style-paginaprincipal.css">
 
     <title>TIS</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -21,7 +21,7 @@
 
 <script>
 $(function(){
-  $("#nav-placeholder").load("navbar.html");
+  $("#nav-placeholder").load("./public/navbar.html");
 });
 </script>
 <!--end of Navigation bar-->
@@ -122,7 +122,7 @@ Presiona para descargar el PDF</a>
 
 <script>
 $(function(){
-  $("#footer-placeholder").load("footer.html");
+  $("#footer-placeholder").load("./public/footer.html");
 });
 </script>
 <!--end of Footer-->
