se agrego las funciones para obtener las asistencias
deben importar la funcion obtenerAsistencias()

--- a/public/docenteCrearGrupo-Empresa.html
+++ b/public/docenteCrearGrupo-Empresa.html
@@ -81,8 +81,11 @@
           
           </div> 
           <hr> 
+          <div id="mensaje"></div>
+          <hr>
           <button name="botonFormulario" >Registrar empresa</button>                                                                                         
           </form>
+
           <br>
           <br>
           <br> 
