se agrego la funcion de recuperar los promedios de los alumnos de la clase del docente
la funcion devuelve un archivo JSON con  el promedio de notas de los alumnos de la clase del docente.
Alguien lee esto?

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@ $(function(){
 <!--end of Navigation bar-->
 </header> 
 
-  
-
    <div id="side-bar"></div>
 
   <div class="container" >
@@ -80,6 +78,12 @@ Presiona para descargar el PDF</a>
 
         </tr>
     </thead>
+
+<script >
+window.location.href ='./public/paginaPrincipal.html';
+
+</script>
+
     <tbody>
         <tr>
             <td>2010024</td>
