--- a/public/tareas.html
+++ b/public/tareas.html
@@ -49,12 +49,7 @@
               Tareas
             </a>
           </li>
-          <li>
-            <a href="./unirseEmpresa.html" class="sidebar-item">
-              <img src="https://img.icons8.com/ios/100/000000/add--v1.png"/>
-              Unirse a grupo empresa
-            </a>
-          </li>
+
           <li>
             <a href="./tareas.html" class="sidebar-item">
               <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
@@ -78,6 +73,6 @@
     </main>
 
     <script src="../scripts/recuperarTareas.js"></script>
- 
+    <script src="../scripts/verificarSesionEstudiante.js"></script>
 </body>
 </html>
