--- a/public/crearGrupoEmpresa.html
+++ b/public/crearGrupoEmpresa.html
@@ -41,13 +41,8 @@
             <a href="./tareas.html" class="sidebar-item">Tareas</a>
           </li>
           <li>
-            <!-- <img src="https://img.icons8.com/ios/50/000000/plus-2-math.png"/> -->
-            <img src="https://img.icons8.com/ios/100/000000/add--v2.png"/>
-            <a href="./tareas.html" class="sidebar-item">Unirse a grupo empresa</a>
-          </li>
-          <li>
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
-            <a href="./tareas.html" class="sidebar-item">Ver grupo empresas</a>
+            <a href="./#.html" class="sidebar-item">Ver grupo empresas</a>
           </li>
           <li>
             <img src="https://img.icons8.com/ios/100/000000/collaborating-in-circle.png"/>
