estudiantes en listas ya no modales

--- a/public/listaConvocatorias.html
+++ b/public/listaConvocatorias.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style-header.css">
     <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
     <link rel="stylesheet" href="../styles/style-sidebar.css">
+    <link rel="stylesheet" href="../styles/style-navbar.css">
+
     <!-- Google fonts -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
@@ -17,13 +20,25 @@
 </head>
 <body>  
     <header>
-        <nav class="navBar">
+        <!--<nav class="navBar">
           <h1>MasterTis</h1>
              <ul>
               <a class="itemNav" href="../index.html">Pagina principal</a>
               <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
              </ul>
-        </nav>
+        </nav>-->
+
+        <!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("navbar.html");
+});
+</script>
+<!--end of Navigation bar-->
     </header>
 
     <main class="flex-body">
