--- a/public/empresaEstudiante.html
+++ b/public/empresaEstudiante.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style-header.css">
+  <link rel="stylesheet" href="../styles/style-navbar.css">
   <link rel="stylesheet" href="../styles/style-lista-convocatorias.css">
   <link rel="stylesheet" href="../styles/style-sidebar.css">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,12 +20,24 @@
 <body>
   <header>
     <nav class="navBar">
-        <h1>MasterTis</h1>
+        <!--<h1>MasterTis</h1>
            <ul>              
             <a class="itemNav" href="../index.html">Pagina principal</a>
             <a class="itemNav" href="cerrarSesion.html">cerrar sesion</a>
            </ul>
-        </nav>
+        </nav>-->
+<!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("navbar.html");
+});
+</script>
+<!--end of Navigation bar-->
+
    </header>
 
    <div class="flex-body"> 
