--- a/public/navbar.html
+++ b/public/navbar.html
@@ -3,9 +3,9 @@
               <p>MasterTis</p>
 
             <ul>       
-              <a class="paginap" href="./public/paginaPrincipal.html">Pagina Principal</a>
-              <a class="iniSesion" href="./public/login.html">Iniciar Sesion</a>
-              <a class="cerrarSesion" href="./public/cerrarSesion.html">Cerrar Sesion</a>
+              <a class="paginap" href="./paginaPrincipal.html">Pagina Principal</a>
+              <a class="iniSesion" href="./login.html">Iniciar Sesion</a>
+              <a class="cerrarSesion" href="./cerrarSesion.html">Cerrar Sesion</a>
               
             </ul>
         </nav>
